sup cliController no more case