@@ -4,6 +4,7 @@ import SuppliersModule.DomainLayer.*;
 import SuppliersModule.Service.*;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class CliController {
 
@@ -28,50 +29,43 @@ public class CliController {
     }
 
     public void displayMainMenu() {
-        System.out.println("""
-                at any stage insert “$” to roll back to the main menu
-                at any stage insert “b” to go back to the previous window
-                insert one of the following numbers to select action
-
-                1. add supplier
-                2. show suppliers
-                3. search product""");
+        System.out.println("\n at any stage insert “$” to roll back to the main menu \n at any stage insert “b” to go back to the previous window \n insert one of the following numbers to select action\n\n1. add supplier \n2. show suppliers\n3. search product");
 
         String input = in.nextLine();
-        switch (input) {
-            case "1" -> addingSupplierWindow();
-            case "2" -> showSuppliersWindow();
-            case "3" -> searchProductWindow();
-            case "$", "b" -> displayMainMenu();
-            default -> {
-                System.out.println("incorrect input\n");
-                displayMainMenu();
-            }
+        if (input.equals("1"))
+            addingSupplierWindow();
+        else if(input.equals("2"))
+            showSuppliersWindow();
+        else if(input.equals("3"))
+            searchProductWindow();
+        else if(input.equals("$") || input.equals("b"))
+            displayMainMenu();
+        else{
+            System.out.println("incorrect input\n");
+            displayMainMenu();
         }
     }
 
     private void addingSupplierWindow() {
-        System.out.println("""
-                insert supplier id, bank account, using cash?, using credit?, contact name, contact phone-number
-                e.g 235 6456684 n y yossi 0524679565""");
+        System.out.println("\ninsert supplier id, bank account, using cash?, using credit?, contact name, contact phone-number\ne.g 235 6456684 n y yossi 0524679565");
 
         String input = in.nextLine();
-        switch (input) {
-            case "$", "b" -> displayMainMenu();
-            default -> {
-                String[] splitted = input.split(" ");
-                if (splitted.length != 6 || (!splitted[2].equals("y") && !splitted[2].equals("n")) || (!splitted[3].equals("y") && !splitted[3].equals("n"))) {
-                    System.out.println("incorrect input\n");
+
+        if(input.equals("$") || input.equals("b"))
+            displayMainMenu();
+        else{
+            String[] splitted = input.split(" ");
+            if (splitted.length != 6 || (!splitted[2].equals("y") && !splitted[2].equals("n")) || (!splitted[3].equals("y") && !splitted[3].equals("n"))) {
+                System.out.println("incorrect input\n");
+                addingSupplierWindow();
+            } else {
+                Response r = ss.addSupplier(splitted[0], splitted[1], splitted[2].equals("y"), splitted[3].equals("y"), splitted[4], splitted[5]);
+                if (r.ErrorOccurred()) {
+                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
                     addingSupplierWindow();
                 } else {
-                    Response r = ss.addSupplier(splitted[0], splitted[1], splitted[2].equals("y"), splitted[3].equals("y"), splitted[4], splitted[5]);
-                    if (r.ErrorOccurred()) {
-                        System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                        addingSupplierWindow();
-                    } else {
-                        System.out.println("action succeed\n");
-                        displayMainMenu();
-                    }
+                    System.out.println("action succeed\n");
+                    displayMainMenu();
                 }
             }
         }
@@ -88,71 +82,61 @@ public class CliController {
             }
             System.out.println("insert supplier id to display its info");
             String input = in.nextLine();
-            switch (input) {
-                case "$", "b" -> displayMainMenu();
-                default -> {
-                    List<Supplier> matchedSupp = r.getValue().stream().filter(supplier -> supplier.getSid().equals(input)).toList();
-                    if (r.getValue().stream().filter(supplier -> supplier.getSid().equals(input)).toList().isEmpty()) {
-                        System.out.println("incorrect input\n");
-                        showSuppliersWindow();
-                    } else {
-                        supplierInfoWindow(input);
-                    }
+            if(input.equals("$") || input.equals("b"))
+                displayMainMenu();
+            else {
+                List<Supplier> matchedSupp = r.getValue().stream().filter(supplier -> supplier.getSid().equals(input)).collect(Collectors.toList());
+                if (r.getValue().stream().noneMatch(supplier -> supplier.getSid().equals(input))) {
+                    System.out.println("incorrect input\n");
+                    showSuppliersWindow();
+                } else {
+                    supplierInfoWindow(input);
                 }
             }
         }
     }
 
     private void searchProductWindow() {
-        System.out.println("""
-                insert product name""");
+        System.out.println("\ninsert product name");
 
         String input = in.nextLine();
-        switch (input) {
-            case "$", "b" -> displayMainMenu();
-            default -> {
-                ResponseT<List<SupProduct>> r = ss.searchProduct(input);
-                if (!r.ErrorOccurred()) {
-                    displayProductsWindow(r.getValue());
-                } else if (r.ErrorOccurred()) {
-                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                    searchProductWindow();
-                }
+        if(input.equals("$") || input.equals("b"))
+            displayMainMenu();
+        else {
+            ResponseT<List<SupProduct>> r = ss.searchProduct(input);
+            if (!r.ErrorOccurred()) {
+                displayProductsWindow(r.getValue());
+            } else if (r.ErrorOccurred()) {
+                System.out.println("action failed, " + r.getErrorMessage() + "\n");
+                searchProductWindow();
             }
         }
     }
 
     private void supplierInfoWindow(String suppId) {
-        System.out.println("""
-                1. display products
-                2. display quantity agreement
-                3. display contract
-                4. display contacts
-                5. delete supplier""");
+        System.out.println("\n1. display products\n2. display quantity agreement\n3. display contract\n4. display contacts\n5. delete supplier");
 
         String input = in.nextLine();
-        switch (input) {
-            case "1" -> displayProductsWindow(suppId);
-            case "2" -> displayQuantityAgreementWindow(suppId);
-            case "3" -> displayContractWindow(suppId);
-            case "4" -> displayContactsWindow(suppId);
-            case "5" -> {
-                Response r = ss.removeSupplier(suppId);
-                if (r.ErrorOccurred()) {
-                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                    supplierInfoWindow(suppId);
-                } else {
-                    System.out.println("action succeed\n");
-                    showSuppliersWindow();
-                }
-            }
-            case "$" -> displayMainMenu();
-            case "b" -> showSuppliersWindow();
-            default -> {
-                System.out.println("incorrect input\n");
-                supplierInfoWindow(suppId);
-            }
+        if(input.equals("1"))
+            displayProductsWindow(suppId);
+        else if(input.equals("2"))
+            displayQuantityAgreementWindow(suppId);
+        else if(input.equals("3"))
+            displayContractWindow(suppId);
+        else if(input.equals("4"))
+            displayContactsWindow(suppId);
+        else if(input.equals("5"))
+            displayMainMenu();
+        else if(input.equals("$"))
+            displayMainMenu();
+        else if(input.equals("b"))
+            showSuppliersWindow();
+        else {
+            System.out.println("incorrect input\n");
+            supplierInfoWindow(suppId);
         }
+
+
 
     }
 
@@ -162,22 +146,20 @@ public class CliController {
             productsString = productsString + sp.toString() + "\n";
         }
 
-        System.out.println("""
-                products: \n""" + productsString + "\n");
+        System.out.println("\nproducts: \n" + productsString + "\n");
     }
 
     private void displayProductsWindow(List<SupProduct> products) {
         showProducts(products);
 
-        System.out.println("""
-                products: \n""" + "\n");
+        System.out.println("\nproducts: \n" + "\n");
 
         String input = in.nextLine();
         String[] splitted = input.split(" ");
-        switch (input) {
-            case "$" -> displayMainMenu();
-            case "b" -> searchProductWindow();
-        }
+        if(input.equals("$"))
+            displayMainMenu();
+        else if(input.equals("b"))
+            searchProductWindow();
     }
 
     private void invalidproductAction(String sid){
@@ -191,90 +173,84 @@ public class CliController {
             showProducts(p.getValue());
 
         System.out.print("Supplier id: " + sid + "\n");
-        System.out.println("""
-                to add product insert 1 and <catalog number, name, price” => page refreshed with product added            
-                insert 2 and product catalog number to remove it
-                insert 3 and product catalog number and product price to update price
-                insert 4 and product catalog number and product name to update name
-                insert 5 and product catalog number and new catalog number to update catalog number""");
+        System.out.println("\nto add product insert 1 and <catalog number, name, price” => page refreshed with product added            \ninsert 2 and product catalog number to remove it\ninsert 3 and product catalog number and product price to update price\ninsert 4 and product catalog number and product name to update name\ninsert 5 and product catalog number and new catalog number to update catalog number");
 
 
         String input = in.nextLine();
         String[] splitted = input.split(" ");
-        switch (input) {
-            case "$" -> displayMainMenu();
-            case "b" -> showSuppliersWindow();
 
-            default -> {
-                Response r;
-                switch (splitted[0]) {
-                    case "1" -> {
-                        if(splitted.length != 4 || !isStringFloat(splitted[3]))
-                            invalidproductAction(sid);
-                        r = ss.addProduct(sid, splitted[1], splitted[2], Float.valueOf(splitted[3]));
-                        if (!r.ErrorOccurred()) {
-                            displayProductsWindow(sid);
-                        } else {
-                            System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                            displayProductsWindow(sid);
-                        }
-                    }
-                    case "2" -> {
-                        if(splitted.length != 2)
-                            invalidproductAction(sid);
-                        r = ss.removeProduct(sid, splitted[1]);
-                        if (!r.ErrorOccurred()) {
-                            displayProductsWindow(sid);
-                        } else {
-                            System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                            displayProductsWindow(sid);
-                        }
-                    }
-                    case "3" -> {
-                        if(splitted.length != 3)
-                            invalidproductAction(sid);
-                        if (!isStringFloat(splitted[2])) {
-                            System.out.println("action failed, price must be float" + "\n");
-                            displayProductsWindow(sid);
-                        }
-                        r = ss.updateProductPrice(sid, splitted[1], Float.parseFloat(splitted[2]));
-                        if (!r.ErrorOccurred()) {
-                            displayProductsWindow(sid);
-                        } else {
-                            System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                            displayProductsWindow(sid);
-                        }
+        if(input.equals("$"))
+            displayMainMenu();
+        else if(input.equals("b"))
+            showSuppliersWindow();
+        else{
+            Response r;
 
-                    }
-                    case "4" -> {
-                        if(splitted.length != 3)
-                            invalidproductAction(sid);
-                        r = ss.updateProductName(sid, splitted[1], splitted[2]);
-                        if (!r.ErrorOccurred()) {
-                            displayProductsWindow(sid);
-                        } else {
-                            System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                            displayProductsWindow(sid);
-                        }
-                    }
-                    case "5" -> {
-                        if(splitted.length != 3)
-                            invalidproductAction(sid);
-                        r = ss.updateProductCatalogNum(sid, splitted[1], splitted[2]);
-                        if (!r.ErrorOccurred()) {
-                            displayProductsWindow(sid);
-                        } else {
-                            System.out.println("action failed, " + r.getErrorMessage() + "\n");
-                            displayProductsWindow(sid);
-                        }
-                    }
-                    default -> {
-                        System.out.println("action failed, invalid argumets" + "\n");
-                        displayProductsWindow(sid);
-                    }
+            if(splitted[0].equals("1")) {
+                if(splitted.length != 4 || !isStringFloat(splitted[3]))
+                    invalidproductAction(sid);
+                r = ss.addProduct(sid, splitted[1], splitted[2], Float.valueOf(splitted[3]));
+                if (!r.ErrorOccurred()) {
+                    displayProductsWindow(sid);
+                } else {
+                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
+                    displayProductsWindow(sid);
                 }
 
+            }
+            else if(splitted[0].equals("2")) {
+                if(splitted.length != 2)
+                    invalidproductAction(sid);
+                r = ss.removeProduct(sid, splitted[1]);
+                if (!r.ErrorOccurred()) {
+                    displayProductsWindow(sid);
+                } else {
+                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
+                    displayProductsWindow(sid);
+                }
 
+            }
+            else if(splitted[0].equals("3")) {
+                if(splitted.length != 3)
+                    invalidproductAction(sid);
+                if (!isStringFloat(splitted[2])) {
+                    System.out.println("action failed, price must be float" + "\n");
+                    displayProductsWindow(sid);
+                }
+                r = ss.updateProductPrice(sid, splitted[1], Float.parseFloat(splitted[2]));
+                if (!r.ErrorOccurred()) {
+                    displayProductsWindow(sid);
+                } else {
+                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
+                    displayProductsWindow(sid);
+                }
+
+            }
+            else if(splitted[0].equals("4")) {
+                if(splitted.length != 3)
+                    invalidproductAction(sid);
+                r = ss.updateProductName(sid, splitted[1], splitted[2]);
+                if (!r.ErrorOccurred()) {
+                    displayProductsWindow(sid);
+                } else {
+                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
+                    displayProductsWindow(sid);
+                }
+            }
+            else if(splitted[0].equals("5")) {
+                if(splitted.length != 3)
+                    invalidproductAction(sid);
+                r = ss.updateProductCatalogNum(sid, splitted[1], splitted[2]);
+                if (!r.ErrorOccurred()) {
+                    displayProductsWindow(sid);
+                } else {
+                    System.out.println("action failed, " + r.getErrorMessage() + "\n");
+                    displayProductsWindow(sid);
+                }
+            }
+            else {
+                System.out.println("action failed, invalid argumets" + "\n");
+                displayProductsWindow(sid);
             }
         }
     }
@@ -316,74 +292,65 @@ public class CliController {
             supplierInfoWindow(suppId);
         }
 
-        System.out.println("""
-                1. discount by order size list : """);
+        System.out.println(" 1. discount by order size list : ");
         //print map 1
         printQuantityAgreementMap(m1.getValue());
-        System.out.println("""
-                2. discount by item quantity list : """);
+        System.out.println(" 2. discount by item quantity list : ");
         //print map 2
         printQuantityAgreementMap(m2.getValue());
 
-        System.out.println("""
-                to add a discount press 1 or 2 and enter item id and quantity and discount
-                to delete a discount press -1 or -2 and enter item id and quantity
-                to add a discount press *1 or *2 and enter item id and quantity and discount
-                 e.g “2 5 100 20””
-                 """ + "\n");
+        System.out.println("\nto add a discount press 1 or 2 and enter item id and quantity and discount\nto delete a discount press -1 or -2 and enter item id and quantity\nto add a discount press *1 or *2 and enter item id and quantity and discount\ne.g “2 5 100 20””\n\n");
 
         String input = in.nextLine();
         String[] splitted = input.split(" ");
-        switch (input) {
-            case "$" -> displayMainMenu();
-            case "b" -> displayMainMenu();
-            default -> {
-                if (splitted.length == 4) {
-                    if (splitted[0].equals("1")) {
-                        Response action = ss.addDiscountPerItem(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
-                        if (action.ErrorOccurred()) {
-                            System.out.println("action faild: " + action.getErrorMessage());
-                        }
-                        displayQuantityAgreementWindow(suppId);
-                    } else if (splitted[0].equals("2")) {
-                        Response action = ss.addDiscountPerOrder(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
-                        if (action.ErrorOccurred()) {
-                            System.out.println("action faild: " + action.getErrorMessage());
-                        }
-                        displayQuantityAgreementWindow(suppId);
-                    } else if (splitted[0].equals("*1")) {
-                        Response action = ss.updateDiscountPerItem(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
-                        if (action.ErrorOccurred()) {
-                            System.out.println("action faild: " + action.getErrorMessage());
-                        }
-                        displayQuantityAgreementWindow(suppId);
-                    } else if (splitted[0].equals("*2")) {
-                        Response action = ss.updateDiscountPerOrder(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
-                        if (action.ErrorOccurred()) {
-                            System.out.println("action faild: " + action.getErrorMessage());
-                        }
-                        displayQuantityAgreementWindow(suppId);
+
+        if(input.equals("$") || input.equals("b"))
+            displayMainMenu();
+        else {
+            if (splitted.length == 4) {
+                if (splitted[0].equals("1")) {
+                    Response action = ss.addDiscountPerItem(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
+                    if (action.ErrorOccurred()) {
+                        System.out.println("action faild: " + action.getErrorMessage());
                     }
-                } else if (splitted.length == 3) {
-                    if (splitted[0].equals("-1")) {
-                        Response action = ss.removeDiscountPerItem(suppId, splitted[1], Integer.valueOf(splitted[2]));
-                        if (action.ErrorOccurred()) {
-                            System.out.println("action faild: " + action.getErrorMessage());
-                        }
-                        displayQuantityAgreementWindow(suppId);
+                    displayQuantityAgreementWindow(suppId);
+                } else if (splitted[0].equals("2")) {
+                    Response action = ss.addDiscountPerOrder(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
+                    if (action.ErrorOccurred()) {
+                        System.out.println("action faild: " + action.getErrorMessage());
                     }
-                    if (splitted[0].equals("-2")) {
-                        Response action = ss.removeDiscountPerOrder(suppId, splitted[1], Integer.valueOf(splitted[2]));
-                        if (action.ErrorOccurred()) {
-                            System.out.println("action faild: " + action.getErrorMessage());
-                        }
-                        displayQuantityAgreementWindow(suppId);
+                    displayQuantityAgreementWindow(suppId);
+                } else if (splitted[0].equals("*1")) {
+                    Response action = ss.updateDiscountPerItem(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
+                    if (action.ErrorOccurred()) {
+                        System.out.println("action faild: " + action.getErrorMessage());
                     }
-                } else {
-                    System.out.println("Invalid action");
+                    displayQuantityAgreementWindow(suppId);
+                } else if (splitted[0].equals("*2")) {
+                    Response action = ss.updateDiscountPerOrder(suppId, splitted[1], Integer.valueOf(splitted[2]), Float.valueOf(splitted[3]));
+                    if (action.ErrorOccurred()) {
+                        System.out.println("action faild: " + action.getErrorMessage());
+                    }
                     displayQuantityAgreementWindow(suppId);
                 }
-
+            } else if (splitted.length == 3) {
+                if (splitted[0].equals("-1")) {
+                    Response action = ss.removeDiscountPerItem(suppId, splitted[1], Integer.valueOf(splitted[2]));
+                    if (action.ErrorOccurred()) {
+                        System.out.println("action faild: " + action.getErrorMessage());
+                    }
+                    displayQuantityAgreementWindow(suppId);
+                }
+                if (splitted[0].equals("-2")) {
+                    Response action = ss.removeDiscountPerOrder(suppId, splitted[1], Integer.valueOf(splitted[2]));
+                    if (action.ErrorOccurred()) {
+                        System.out.println("action faild: " + action.getErrorMessage());
+                    }
+                    displayQuantityAgreementWindow(suppId);
+                }
+            } else {
+                System.out.println("Invalid action");
+                displayQuantityAgreementWindow(suppId);
             }
         }
     }
@@ -395,41 +362,19 @@ public class CliController {
             supplierInfoWindow(suppId);
         } else {
             System.out.println(r.getValue().toString());
-            System.out.println("""
-                    insert a number and a following info to update
-                    e.g 2 5 will change the max delivery days to 5
-                                        
-                    1. change delivery day (expecting a day in the week as a number between 1-7 and y/n)
-                    2. change max delivery days (any not negative number or -1 for no max delivery days)
-                    3. change delivery service status (y/n)""");
+            System.out.println("\ninsert a number and a following info to update\ne.g 2 5 will change the max delivery days to 5\n\n1. change delivery day (expecting a day in the week as a number between 1-7 and y/n)\n2. change max delivery days (any not negative number or -1 for no max delivery days)\n3. change delivery service status (y/n)");
             String input = in.nextLine();
             String[] splitted = input.split(" ");
-            switch (splitted[0]) {
-                case "1" -> {
-                    try {
-                        if (!splitted[2].equals("y") && !splitted[2].equals("n")) {
-                            System.out.println("incorrect input\n");
-                            displayContractWindow(suppId);
-                        } else {
-                            boolean[] days = new boolean[7];
-                            days[Integer.parseInt(splitted[1]) - 1] = splitted[2].equals("y");
-                            Response r2 = ss.setSupplyDays(suppId, days);
-                            if (r2.ErrorOccurred()) {
-                                System.out.println("incorrect input\n");
-                                displayContractWindow(suppId);
-                            } else {
-                                System.out.println("action succeed\n");
-                                displayContractWindow(suppId);
-                            }
-                        }
-                    } catch (Exception e) {
+
+            if(splitted[0].equals("1")){
+                try {
+                    if (!splitted[2].equals("y") && !splitted[2].equals("n")) {
                         System.out.println("incorrect input\n");
                         displayContractWindow(suppId);
-                    }
-                }
-                case "2" -> {
-                    try {
-                        Response r2 = ss.setSupplyMaxDays(suppId, Integer.parseInt(splitted[1]));
+                    } else {
+                        boolean[] days = new boolean[7];
+                        days[Integer.parseInt(splitted[1]) - 1] = splitted[2].equals("y");
+                        Response r2 = ss.setSupplyDays(suppId, days);
                         if (r2.ErrorOccurred()) {
                             System.out.println("incorrect input\n");
                             displayContractWindow(suppId);
@@ -437,49 +382,62 @@ public class CliController {
                             System.out.println("action succeed\n");
                             displayContractWindow(suppId);
                         }
-                    } catch (Exception e) {
-                        System.out.println("incorrect input\n");
-                        displayContractWindow(suppId);
                     }
-                }
-                case "3" -> {
-                    try {
-                        if (!splitted[1].equals("y") && !splitted[1].equals("n")) {
-                            System.out.println("incorrect input\n");
-                            displayContractWindow(suppId);
-                        } else {
-                            Response r2 = ss.setDeliveryService(suppId, splitted[1].equals("y"));
-                            if (r2.ErrorOccurred()) {
-                                System.out.println("incorrect input\n");
-                                displayContractWindow(suppId);
-                            } else {
-                                System.out.println("action succeed\n");
-                                displayContractWindow(suppId);
-                            }
-                        }
-                    } catch (Exception e) {
-                        System.out.println("incorrect input\n");
-                        displayContractWindow(suppId);
-                    }
-
-                }
-                case "$" -> displayMainMenu();
-                case "b" -> supplierInfoWindow(suppId);
-                default -> {
+                } catch (Exception e) {
                     System.out.println("incorrect input\n");
                     displayContractWindow(suppId);
                 }
             }
+            else if(splitted[0].equals("2")){
+                try {
+                    Response r2 = ss.setSupplyMaxDays(suppId, Integer.parseInt(splitted[1]));
+                    if (r2.ErrorOccurred()) {
+                        System.out.println("incorrect input\n");
+                        displayContractWindow(suppId);
+                    } else {
+                        System.out.println("action succeed\n");
+                        displayContractWindow(suppId);
+                    }
+                } catch (Exception e) {
+                    System.out.println("incorrect input\n");
+                    displayContractWindow(suppId);
+                }
+            }
+            else if(splitted[0].equals("3")){
+                try {
+                    if (!splitted[1].equals("y") && !splitted[1].equals("n")) {
+                        System.out.println("incorrect input\n");
+                        displayContractWindow(suppId);
+                    } else {
+                        Response r2 = ss.setDeliveryService(suppId, splitted[1].equals("y"));
+                        if (r2.ErrorOccurred()) {
+                            System.out.println("incorrect input\n");
+                            displayContractWindow(suppId);
+                        } else {
+                            System.out.println("action succeed\n");
+                            displayContractWindow(suppId);
+                        }
+                    }
+                } catch (Exception e) {
+                    System.out.println("incorrect input\n");
+                    displayContractWindow(suppId);
+                }
+            }
+            else if(splitted[0].equals("$")){
+                displayMainMenu();
+            }
+            else if(splitted[0].equals("b")){
+                supplierInfoWindow(suppId);
+            }
+            else{
+                System.out.println("incorrect input\n");
+                displayContractWindow(suppId);
+            }
         }
-
-
     }
 
     private void displayContactsWindow(String suppId) {
-        System.out.println("""
-                to add "1" and contact insert name and phone number
-                to delete a contact enter "2" and contacts name
-                """);
+        System.out.println(" \nto add \"1\" and contact insert name and phone number\nto delete a contact enter \"2\" and contacts name");
 
         ResponseT<Map<String, String>> p = ss.getSupplierContacts(suppId);
         if (p.ErrorOccurred())
@@ -487,25 +445,28 @@ public class CliController {
 
         String input = in.nextLine();
         String[] splitted = input.split(" ");
-        switch (input) {
-            case "$" -> displayMainMenu();
-            case "b" -> showSuppliersWindow();
-            default -> {
-                if (splitted[0].equals("1")) {
-                    if (splitted.length != 3) {
-                        System.out.println("Invalid input");
-                        displayContactsWindow(suppId);
-                    }
-                    Response action = ss.addContact(suppId, splitted[1], splitted[2]);
-                    if (action.ErrorOccurred())
-                        System.out.println("action failed: " + action.getErrorMessage());
-                } else if (splitted[0].equals("2") && splitted.length == 2) {
-                    Response action = ss.removeContact(suppId, splitted[1]);
-                    if (action.ErrorOccurred())
-                        System.out.println("action failed: " + action.getErrorMessage());
+
+        if(splitted[0].equals("$")){
+            displayMainMenu();
+        }
+        else if(splitted[0].equals("b")){
+            showSuppliersWindow();
+        }
+        else{
+            if (splitted[0].equals("1")) {
+                if (splitted.length != 3) {
+                    System.out.println("Invalid input");
+                    displayContactsWindow(suppId);
                 }
-                displayContactsWindow(suppId);
+                Response action = ss.addContact(suppId, splitted[1], splitted[2]);
+                if (action.ErrorOccurred())
+                    System.out.println("action failed: " + action.getErrorMessage());
+            } else if (splitted[0].equals("2") && splitted.length == 2) {
+                Response action = ss.removeContact(suppId, splitted[1]);
+                if (action.ErrorOccurred())
+                    System.out.println("action failed: " + action.getErrorMessage());
             }
+            displayContactsWindow(suppId);
         }
     }
 
